apps/argoci/argoci-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
  namespace: argo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argo-server
  template:
    metadata:
      labels:
        app: argo-server
    spec:
      containers:
        - name: argo-server
          image: quay.io/argoproj/argocli:v3.5.5 # image chuẩn của Argo Workflows UI
          command: ["argo", "server"]
          args: ["--address", "0.0.0.0", "--secure=false"]
          ports:
            - containerPort: 2746
          resources:
            limits:
              memory: "1Gi"
            requests:
              memory: "512Mi"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: argo-server-service
  namespace: argo
spec:
  type: NodePort
  selector:
    app: argo-server
  ports:
    - port: 2746
      targetPort: 2746
      nodePort: 30881
      protocol: TCP
