apps/argoci/argo-ci-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ci-ingress
  namespace: argo
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: ci.nefyo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-server
                port:
                  number: 2746
  tls:
    - hosts:
        - ci.nefyo.com
      secretName: ci-nefyo-com-tls
